--- a/templates/project_fastai.html
+++ b/templates/project_fastai.html
@@ -86,6 +86,9 @@
                             src = "/static/img/learning rate.png"
                             alt = "Dataloader"
                         />
+                    <p>
+                        To train the model, we need to create fine_tine(epochs, lr)in which is the analogous system of ML models.
+                    </p>
                 </article>
             </article>
         </div>
