--- a/templates/project_fastai.html
+++ b/templates/project_fastai.html
@@ -91,6 +91,17 @@
                     </p>
                 </article>
             </article>
+            <section>
+                <article class="project__meta-group">
+                    <h3 class = "project__heading project__heading--meta"> Technologies used</h3>
+
+                    <ul class="technology-list">
+                        <li class="technology-list__item">Python</li>
+                        <li class="technology-list__item">PyTorch</li>
+                        <li class="technology-list__item">fastai</li>
+                    </ul>
+                </article>
+            </section>
         </div>
     </main>
 
