--- a/static/css/style.css
+++ b/static/css/style.css
@@ -137,6 +137,96 @@ body {
     margin: 0 0.25rem;
 }
 
+.hero {
+    width: 100%;
+    margin-bottom: 1.5rem;
+}
+
+.project {
+    display: flex;
+    max-width: 50rem;
+    flex-direction: column;
+    font-size: 1.2rem;
+    padding: 0 1rem;
+}
+
+.project__content {
+    margin-bottom: 1rem;
+    line-height: 150%
+}
+
+@media (min-width: 48.75em){
+    .project {
+        flex-direction: row;
+        padding: 0;
+    }
+
+    .project__content {
+        flex: 7;
+        margin-right: 3rem;
+        padding: 0;
+    }
+}
+
+.project__heading {
+    margin: 0;
+    font-size: 2rem;
+    line-height: 150%;
+}
+
+.project__heading--meta {
+    font-size: inherit;
+    margin-bottom: 1rem;
+}
+
+.project__meta-group {
+    margin-bottom: 1rem;
+}
+
+.project__meta-group,
+.cta {
+    padding: 1rem;
+    background-color: #d4eafa;
+    border-radius: 6px;
+}
+
+.cta {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    color: #1c2023;
+    text-decoration: none;
+}
+
+.cta:hover {
+    text-decoration: underline;
+}
+
+.cta__icon {
+    margin-right: 0.5rem;
+    transform: translateY(1px)
+}
+
+.technology-list {
+    list-style: none;
+    margin: 0;
+    padding-left: 0.75rem;
+    line-height: 1.75rem;
+}
+
+.technology-list__item:before {
+    content: "";
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    background-image: url("/static/img/list-check.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-right: 0.5rem;
+    transform: translateY(2px);
+}
+
 .contact__link:hover {
     color: #4cafda
 }
