--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,14 +81,14 @@ body {
 @media (min-width: 48.75em) {
     .project{
         grid-template-columns: repeat(2, 1fr);
-        max-width: 45em;
+        max-width: 45rem;
     }
 }
 
 @media (min-width: 70em) {
     .project{
         grid-template-columns: repeat(3, 1fr);
-        max-width: 68em;
+        max-width: 68rem;
     }
 }
 
