--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <main class ="main main--about">
+    <img src = "./static/img/Koravich Sangkaew_photo.jpg"/>
     <p>
         🎓 Hi, I'm Koravich! I am a fresh post-graduate Data Science student @QMUL who is fascinated with AI technology such as NLP, Computer Vision, and Cloud Computing. I am also seeking the job in Data scientist, Data Engineer, and ML Engineer.
     </p>
