--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,7 +6,7 @@
         <div class="contact">
             <dt>Email:</dt>
             <dd class ="contact__details">
-                <a class="contact__link" href="kwankoravich@hotmail.com">
+                <a class="contact__link" href="mailto:kwankoravich@hotmail.com">
                     kwankoravich@hotmail.com
                 </a>
             </dd>
@@ -14,7 +14,7 @@
         <div class="contact">
             <dt>Github:</dt>
             <dd class ="contact__details">
-                <a class="contact__link" href="github.com/kwankoravich">
+                <a class="contact__link" href="github.com/kwankoravich" target="_blank">
                     @kwankoravich
                 </a>
             </dd>
@@ -22,8 +22,16 @@
         <div class="contact">
             <dt>Linkedin:</dt>
             <dd class ="contact__details">
-                <a class="contact__link" href="linkedin.com/koravich-sangkaew">
+                <a class="contact__link" href="linkedin.com/koravich-sangkaew" target="_blank">
                     Koravich Sangkaew
+                </a>
+            </dd>
+        </div>
+        <div class="contact">
+            <dt>Medium:</dt>
+            <dd class ="contact__details">
+                <a class="contact__link" href="https://medium.com/@kwankoravich" target="_blank">
+                    @kwankoravich
                 </a>
             </dd>
         </div>
