--- a/templates/base.html
+++ b/templates/base.html
@@ -2,18 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge", chrome = 1>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Koravich Sangkaew | Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css??family=Lato:wght@400;700&display=swap" rel="'stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="'stylesheet"> -->
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
 </head>
 <body>
     <header class = "header">
         <h1>Koravich Sangkaew</h1>
-
+        <!-- <img 
+                    src="./static/img/dark_blue.jpg"
+                    alt="background"
+        /> -->
+        <!-- <img src = "./static/img/Koravich Sangkaew_photo.jpg"/> -->
+        <!-- <iframe src="./static/img/dark_blue.jpg" title="background"></iframe> -->
         <nav class="nav">
             <a href="{{ url_for('personal_profile.home') }}" class="nav__link {{ 'nav_link--active' if request.path == url_for('personal_profile.home')}}">
                 Projects
