--- a/templates/project_fastai.html
+++ b/templates/project_fastai.html
@@ -174,6 +174,7 @@
                 </article>
             </article>
             <section>
+            <!-- <div> -->
                 <article class="project__meta-group">
                     <h3 class = "project__heading project__heading--meta"> Technologies used</h3>
 
@@ -184,6 +185,7 @@
                     </ul>
                 </article>
             </section>
+            <!-- </div> -->
         </div>
     </main>
 
