--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,7 +14,7 @@
         <div class="contact">
             <dt>Github:</dt>
             <dd class ="contact__details">
-                <a class="contact__link" href="github.com/kwankoravich" target="_blank">
+                <a class="contact__link" href="https://github.com/kwankoravich" target="_blank">
                     @kwankoravich
                 </a>
             </dd>
@@ -22,7 +22,7 @@
         <div class="contact">
             <dt>Linkedin:</dt>
             <dd class ="contact__details">
-                <a class="contact__link" href="linkedin.com/koravich-sangkaew" target="_blank">
+                <a class="contact__link" href="https://linkedin.com/koravich-sangkaew" target="_blank">
                     Koravich Sangkaew
                 </a>
             </dd>
